# First-Impression-

./: .dockerignore  .env.example  .gitignore  .mcp.json  CHANGELOG.md  Dockerfile  HANDOFF.md  README.md  docker-compose.yml  project.md  pyproject.toml
.claude/: settings.json
app/: __init__.py  config.py  events.py  main.py  mcp_server.py  observability.py  schemas.py
app/agent/: __init__.py  groq_driver.py  grounding.py  judge.py  llm.py  llm_pool.py  panel.py  personas.py  prompts.py  react.py  report.py  tools.py
app/ingestion/: __init__.py  chunker.py  fetcher.py  render.py  robots.py  sanitize.py  vision.py
app/rag/: __init__.py  embeddings.py  fusion.py  keyword.py  pipeline.py  qa.py  rerank.py  store.py
app/static/: index.html
evals/: build_outreach_xlsx.py  debug_retrieval.py  embed_rerank_bakeoff.py  model_bakeoff.py  model_bakeoff2.py  rejudge_reports.py  retrieval_eval.json  run_deep_reports.py  run_new_companies.py  run_report.py  run_retrieval_eval.py  vision_bakeoff.py
tests/: conftest.py  test_agent.py  test_chunker.py  test_fusion.py  test_guardrails.py  test_health.py  test_mcp_server.py  test_observability.py  test_panel.py  test_stream.py
web/: deploy.py  render_report.py  report.html  to_pdf.py
